update index page 1. fix huawei logo background 2. fix kernel arch image not centered 3. update index kernel desc

--- a/src/components/Homepage/KernelArch/styles.module.css
+++ b/src/components/Homepage/KernelArch/styles.module.css
@@ -1,6 +1,10 @@
-.teams {
+.kernelArch {
   display: flex;
   align-items: center;
   padding: 2rem 0;
   width: 100%;
+}
+
+.kernelArchImg {
+  padding: 2rem 0;
 }
